--- a/params/ekf_template.yaml
+++ b/params/ekf_template.yaml
@@ -1,15 +1,15 @@
 frequency: 30
 sensor_timeout: 0.1
 transform_time_offset: 0.0
-two_d_mode: false
+two_d_mode: true
 print_diagnostics: true
 
 debug: false
-debug_out_file: /path/to/debug/file.txt
+debug_out_file: ~/catkin_ws/rosbags/rlekf_out.txt
 
 map_frame: map
 odom_frame: odom
-base_link_frame: base_link
+base_link_frame: base_footprint
 world_frame: odom
 
 use_control: true
@@ -21,64 +21,49 @@ deceleration_limits: [1.3, 0.0, 0.0, 0.0, 0.0, 4.5]
 acceleration_gains: [0.8, 0.0, 0.0, 0.0, 0.0, 0.9]
 deceleration_gains: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0]
 
-odom0: example/odom
-odom0_config: [true,true,false,
+odom0: odom/virtual
+odom0_config: [false, false, false,
                false, false, false,
+               true, true, true,
                false, false, false,
-               false, false, true,
                false, false, false]
-odom0_differential: false
+odom0_differential: true
 odom0_relative: false
 odom0_queue_size: 2
 odom0_pose_rejection_threshold: 5
 odom0_twist_rejection_threshold: 1
 odom0_nodelay: false
 
-odom1: example/another_odom
-odom1_config: [false, false, true,
+odom1: odometry/gps
+odom1_config: [true, true, true,
                false, false, false,
                false, false, false,
-               false, false, true,
+               false, false, false,
                false, false, false]
 odom1_differential: false
-odom1_relative: true
+odom1_relative: false
 odom1_queue_size: 2
-odom1_pose_rejection_threshold: 2
-odom1_twist_rejection_threshold: 0.2
+odom1_pose_rejection_threshold: 5
+odom1_twist_rejection_threshold: 1
 odom1_nodelay: false
 
-pose0: example/pose
-pose0_config: [true,  true,  false,
-               false, false, false,
-               false, false, false,
-               false, false, false,
-               false, false, false]
-pose0_differential: true
-pose0_relative: false
-pose0_queue_size: 5
-pose0_rejection_threshold: 2
-pose0_nodelay: false
-
-twist0: example/twist
+twist0: roboteq_driver/cmd_with_covariance
 twist0_config: [false, false, false,
-                false, false, false,
-                true,  true,  true,
-                false, false, false,
-                false, false, false]
+               false, false, false,
+               true, true, true,
+               true, true, true,
+               false, false, false]
 twist0_queue_size: 3
 twist0_rejection_threshold: 2
 twist0_nodelay: false
 
-imu0: example/imu
+imu0: imu/raw
 imu0_config: [false, false, false,
-              true,  true,  true,
+              true, true, true,
               false, false, false,
-              true,  true,  true,
-              true,  true,  true]
+              true, true, true,
+              false, false, false]
 imu0_nodelay: false
-
-odom1_differential: false
-odom1_relative: true
 imu0_queue_size: 5
 imu0_pose_rejection_threshold: 0.8
 imu0_twist_rejection_threshold: 0.8
