--- a/params/ekf_template.yaml
+++ b/params/ekf_template.yaml
@@ -4,7 +4,7 @@ transform_time_offset: 0.0
 two_d_mode: true
 print_diagnostics: true
 
-debug: false
+debug: true
 debug_out_file: ~/catkin_ws/rosbags/rlekf_out.txt
 
 map_frame: map
@@ -29,7 +29,7 @@ odom0_config: [false, false, false,
                false, false, false]
 odom0_differential: true
 odom0_relative: false
-odom0_queue_size: 2
+odom0_queue_size: 1
 odom0_pose_rejection_threshold: 5
 odom0_twist_rejection_threshold: 1
 odom0_nodelay: false
@@ -42,32 +42,42 @@ odom1_config: [true, true, true,
                false, false, false]
 odom1_differential: false
 odom1_relative: false
-odom1_queue_size: 2
-odom1_pose_rejection_threshold: 5
+odom1_queue_size: 1
+odom1_pose_rejection_threshold: 1
 odom1_twist_rejection_threshold: 1
 odom1_nodelay: false
 
-twist0: roboteq_driver/cmd_with_covariance
-twist0_config: [false, false, false,
-               false, false, false,
-               true, true, true,
-               true, true, true,
-               false, false, false]
-twist0_queue_size: 3
-twist0_rejection_threshold: 2
-twist0_nodelay: false
+#twist0: roboteq_driver/cmd_with_covariance
+#twist0_config: [false, false, false,
+#               false, false, false,
+#               true, true, true,
+#               true, true, true,
+#               false, false, false]
+#twist0_queue_size: 1
+#twist0_relative: true
+#twist0_rejection_threshold: 2
+#twist0_nodelay: false
 
 imu0: imu/raw
 imu0_config: [false, false, false,
-              true, true, true,
               false, false, false,
-              true, true, true,
+              false, false, false,
+              false, false, true,
               false, false, false]
+imu0_relative: true
 imu0_nodelay: false
-imu0_queue_size: 5
-imu0_pose_rejection_threshold: 0.8
+imu0_queue_size: 1
 imu0_twist_rejection_threshold: 0.8
-imu0_linear_acceleration_rejection_threshold: 0.8
+
+pose0: /novatel/heading
+pose0_config: [false, false, true,
+              false, false, true,
+              false, false, false,
+              false, false, false,
+              false, false, false]
+pose0_relative: false
+pose0_queue_size: 1
+
 
 process_noise_covariance: [0.05, 0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
                            0,    0.05, 0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
